Fixed alignments of buttons and search field in participants index view

--- a/app/assets/stylesheets/participants.css.scss
+++ b/app/assets/stylesheets/participants.css.scss
@@ -65,7 +65,12 @@ $tvhc-header-background: $blue;
 
 }
 
-
+.mobile-search input{
+  display: inline;
+  &#search {
+    width: 50%;
+  }
+}
 
 .filters {
   button {
